--- a/_posts/2020-08-21-blog-post-1.md
+++ b/_posts/2020-08-21-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'Sanya's research journal
+title: "Sanya's research journal"
 date: 2020-08-21
 permalink: /posts/2020/08/blog-post-1/
 tags:
