--- a/_posts/2020-08-21-blog-post-1.md
+++ b/_posts/2020-08-21-blog-post-1.md
@@ -4,8 +4,13 @@ date: 2020-08-21
 permalink: /posts/2020/08/blog-post-1/
 tags:
   - research jounal
+  - introduction
 ---
 
 Hi all, this is the very first post in my new research journal - started as a course requirement for INFSCI: 3005 Introduction to Doctoral Studies. I'm a PhD student in the [Intelligent Systems Program](https://www.isp.pitt.edu/ "ISP") at the University of Pittsburgh. My brief introduction can be found [here](https://sanyabt.github.io/). In future, this research journal will include the following posts:
 
+* Recaps of talks attended of varying topics such as machine learning, biomedical informatics and research methods
+* Article reviews for any papers I read
+* Updates on projects and publications
+* Thoughts on my Ph.D. jouney
 
